Trying to fix left and right wiggle in Android. Not showing up in Chrome dev tools.

--- a/src/App.css
+++ b/src/App.css
@@ -3,3 +3,7 @@
   margin: 0;
   box-sizing: border-box;
 }
+
+.main__app{
+  width: 100vw;
+}
