--- a/src/Home.css
+++ b/src/Home.css
@@ -58,8 +58,7 @@
 .home__content-container{
     display: flex;
     flex-direction: column;
-    /* min-height: calc(100vh - 100px); */
-    flex: 1;
+    min-height: calc(100vh - 100px);
     padding-bottom: 50px;
     background-color: white;
 }
